--- a/Ivona.cabal
+++ b/Ivona.cabal
@@ -30,3 +30,4 @@ executable Ivona
                        split
   hs-source-dirs:      src
   default-language:    Haskell2010
+  ghc-options:         -Wall -Werror
