--- a/Ivona.cabal
+++ b/Ivona.cabal
@@ -29,7 +29,8 @@ executable Ivona
                        http-client,
                        http-client-tls,
                        optparse-applicative,
-                       formatting
+                       formatting,
+                       process
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -Wall -Werror
